<resources>
    <string name="app_name">Studere</string>
    <string name="activity_subject_title_pattern">%1$s - %2$s</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="score_text">%.1f</string>
    <string name="subject_status_average">
        <![CDATA[
            <b>%.1f</b> is your average!
        ]]>
    </string>
    <string name="subject_status_none_available">No enough scores available to get a status!</string>
    <string name="subject_status_finished_passed">Congratulations, you passed!</string>
    <string name="subject_status_finished_passed_false">Hey, you didn\'t pass but you can do better next time, believe in yourself!</string>
    <string name="subject_status_not_finished_passed">Your average is above the needed for now, give yourself a rest!</string>
    <string name="subject_status_not_finished_passed_false">You don\'t have enough score to pass, keep studying!</string>
    <string name="subjects">Subjects</string>
    <string name="subject_title">Subject\'s name</string>
    <string name="subject_description">A short description, or its teacher</string>
    <string name="subject_dialog_title_new">Create a new subject</string>
    <string name="subject_dialog_title_edit">Edit the selected subject</string>
    <string name="button_save">Save</string>
    <string name="error_invalid_fields">Complete all the fields!</string>
    <string name="button_cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="dialog_title_remove">Do you really want to remove %s?</string>
    <string name="weight">Weight</string>
    <string name="error_invalid_subject">Received an invalid subject, returning to previous screen!</string>
    <string name="subject_score_list_empty">This subject hasn\'t any scores, let\'s change that!\nJust press the + button below!</string>
    <string name="score">Score</string>
    <string name="score_dialog_title_edit">Edit this score</string>
    <string name="score_dialog_title_new">Add a new score</string>
    <string name="score_dialog_hint">First test</string>
    <string name="agenda">Agenda</string>
    <string name="appointment_title_hint">Enter the title of your appointment…</string>
    <string name="appointment_description_hint">Add a note or description</string>
    <string name="appointment_notification_option_1">No notification</string>
    <string name="appointment_notification_option_2">10 minutes before</string>
    <string name="appointment_notification_option_3">30 minutes before</string>
    <string name="appointment_notification_option_4">1 hour before</string>
    <string name="appointment_subject_empty">No related subject yet</string>
    <string name="appointment_dialog_close_title">Do you wish to discard this appointment?</string>
    <string name="error_empty_title">An appointment can\'t be created without a title!</string>
    <string name="error_invalid_date">Please set a valid date! It shouldn\'t be in the past!</string>
    <string name="appointment_dialog_subject_title">Link this appointment with a subject</string>
    <string name="error_empty_subject_list">You didn\'t create any subject yet!</string>
    <string name="subject_empty_recycler_message">Seems like you didn\'t add a subject yet!\nJust press the + button below!</string>
    <string name="agenda_empty_recycler_message">Apparently you\'re not that busy!\nAdd an appointment by pressing the + button below!</string>
    <string name="none">None</string>
    <string name="default_text">Default</string>
    <string name="subject_snackbar_average">
        <![CDATA[
        The average of the selected items is <b>%.2f</b>
        ]]>
    </string>
    <string name="subject_selected_item">%d score(s) selected</string>
    <string name="hide">Hide</string>
</resources>
