<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <import type="com.gildaswise.notabook.utils.Constant"/>
        <variable
            name="score"
            type="com.gildaswise.notabook.core.Score"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.gildaswise.horizontalcounter.HorizontalCounter
            android:id="@+id/hc_score_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:visibility="@{(score.weight > 1.0) ? View.VISIBLE : View.GONE}"
            app:initialValue="@{score.weight ?? Double.valueOf(1)}"
            app:maxValue="100.0"
            app:minValue="1.0"
            app:displayAsInteger="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.gildaswise.horizontalcounter.HorizontalCounter
            android:id="@+id/hc_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:initialValue="@{score.value ?? Double.valueOf(5.5)}"
            app:maxValue="10.0"
            app:minValue="0.0"
            app:stepValue="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_score_title" />

        <TextView
            android:id="@+id/text_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/score_description" />

        <Switch
            android:id="@+id/switch_weighted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/md_light_secondary"
            android:checked="@{(score != null) ? (score.weight > 1.0) : false}"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hc_score_value"
            app:layout_constraintBottom_toTopOf="@+id/hc_score_weight" />

        <EditText
            android:id="@+id/score_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:inputType="textPersonName"
            android:text="@{score.description ?? Constant.STRING_EMPTY}"
            android:textSize="18sp"
            android:hint="@string/score_dialog_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>