<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.gildaswise.notabook.utils.Constant"/>
        <import type="com.gildaswise.notabook.utils.DateUtils"/>
        <variable
            name="appointment"
            type="com.gildaswise.notabook.core.Appointment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_close"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:src="@{appointment.id != null ? @drawable/back : @drawable/close}"
                    android:tint="@color/md_white_1000"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="end"
                    android:text="@string/button_save"
                    android:textColor="@color/md_white_1000"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

            <EditText
                android:id="@+id/appointment_title"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{appointment.title ?? Constant.STRING_EMPTY}"
                android:hint="@string/appointment_title_hint"
                android:textColorHint="#B3FFFFFF"
                android:textSize="18sp"
                android:textColor="@color/md_white_1000"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_clock"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/clock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appointment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:text="@{DateUtils.toShortDateString(appointment.date)}"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/image_clock"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appointment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@{DateUtils.toShortTimeString(appointment.date)}"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/appointment_date"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.948"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/divider_01"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/divider_01"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/md_grey_500"
                app:layout_constraintTop_toBottomOf="@+id/image_clock"/>

            <ImageView
                android:id="@+id/image_bell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/bell"
                app:layout_constraintTop_toBottomOf="@+id/divider_01"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divider_02"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/md_grey_500"
                app:layout_constraintTop_toBottomOf="@+id/image_bell"/>

            <TextView
                android:id="@+id/appointment_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{appointment != null ? context.getString(appointment.notificationType.stringRes) : @string/appointment_notification_option_3}"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/image_bell"
                app:layout_constraintBottom_toTopOf="@+id/divider_02"
                app:layout_constraintTop_toBottomOf="@+id/divider_01" />

            <ImageView
                android:id="@+id/image_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorPrimaryDark"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/comment_multiple_outline"
                app:layout_constraintTop_toBottomOf="@+id/divider_02"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divider_03"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/md_grey_500"
                app:layout_constraintTop_toBottomOf="@+id/image_description"/>

            <EditText
                android:id="@+id/appointment_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{appointment.description ?? Constant.STRING_EMPTY}"
                android:hint="@string/appointment_description_hint"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/image_description"
                app:layout_constraintBottom_toTopOf="@+id/divider_03"
                app:layout_constraintTop_toBottomOf="@+id/divider_02"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/image_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/book_open_variant"
                app:layout_constraintTop_toBottomOf="@+id/divider_03"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/appointment_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{appointment.relatedSubject.name ?? @string/appointment_subject_empty}"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/image_book"
                app:layout_constraintTop_toBottomOf="@+id/divider_03"
                app:layout_constraintBottom_toTopOf="@+id/divider_04" />

            <View
                android:id="@+id/divider_04"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/image_book"/>

        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

</layout>